--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
     window.greenChatIconURL = "<%= image_url('wiggles/green-chat-icon.png')%>"
     window.yellowChatIconURL = "<%= image_url('wiggles/yellow-chat-icon.png')%>"
     window.zendeskIconURL = "<%= image_url('wiggles/zendesk-icon.png')%>"
+    window.sessionErrorURL = "<%= image_url('session-error.png')%>"
 
   </script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+
 
   <head>
     <title>YeOldeSlaec</title>
