--- a/app/assets/stylesheets/session.css
+++ b/app/assets/stylesheets/session.css
@@ -84,7 +84,13 @@
   margin-bottom: -10px;
   width: 600px;
   padding: 10px 0;
-  border-left: solid #e01e5a 5px;
+  border-left: solid var(--errorRed) 5px;
+}
+
+.fa.fa-warning {
+  color: var(--errorRed);
+  margin-left: 7px;
+  font-size: 28px;
 }
 
 .session-errors {
@@ -94,5 +100,4 @@
   font-size: 14px;
   padding: 0 0 1% 3%;
   width: 100%;
-
 }
