--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,17 @@
 
   <script type="text/javascript">
     window.logoURL = "<%= image_url('Slack_Mark.svg')%>"
-    window.asanaIconURL = "<%= image_url('wiggles/asana-icon.png')%>"
-    window.dropboxIconURL = "<%= image_url('wiggles/dropbox-icon.png')%>"
-    window.greenChatIconURL = "<%= image_url('wiggles/green-chat-icon.png')%>"
     window.yellowChatIconURL = "<%= image_url('wiggles/yellow-chat-icon.png')%>"
     window.zendeskIconURL = "<%= image_url('wiggles/zendesk-icon.png')%>"
+    window.greenChatIconURL = "<%= image_url('wiggles/green-chat-icon.png')%>"
+    window.asanaIconURL = "<%= image_url('wiggles/asana-icon.png')%>"
+    window.dropboxIconURL = "<%= image_url('wiggles/dropbox-icon.png')%>"
+    window.blueChatIconURL = "<%= image_url('wiggles/blue-chat-icon.png')%>"
+    window.hubspotIconURL = "<%= image_url('wiggles/hubspot-icon.png')%>"
+    window.atlassianIconURL = "<%= image_url('wiggles/atlassian-icon.png')%>"
+    window.googleIconURL = "<%= image_url('wiggles/google-icon.png')%>"
+    window.zoomIconURL = "<%= image_url('wiggles/zoom-icon.png')%>"
+    window.redChatIconURL = "<%= image_url('wiggles/red-chat-icon.png')%>"
     window.sessionErrorURL = "<%= image_url('session-error.png')%>"
 
   </script>
