Added channels to navbar, added header to main workspace, added rudimentary messages for currently active channel, added topic update form, added css, several small changes, bug fixes, adjustments

--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -27,3 +27,31 @@
   display: flex;
   justify-content: space-between;
 }
+
+/* NavBar Channels */
+#nav_bar-channels {
+  margin: 16px 0 24px 0;
+}
+/* ChannelIndex */
+#channel-index {
+  margin: 0 -16px;
+}
+#channel-index li {
+  display: block;
+  margin: 4px 0 4px 16px;
+}
+
+
+.channel-index-item-inactive, 
+.channel-index-item-active {
+  display: inline-block;
+  width: 100%;
+  padding: 4px 0 4px 16px;
+  margin-left: -16px;
+  text-decoration: none;
+  color: var(--navBarGray);
+}
+.channel-index-item-active {
+  background: var(--navIndexBlue);
+  color: white;
+}
