--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,15 @@
     window.zoomIconURL = "<%= image_url('wiggles/zoom-icon.png')%>"
     window.redChatIconURL = "<%= image_url('wiggles/red-chat-icon.png')%>"
     window.sessionErrorURL = "<%= image_url('session-error.png')%>"
+
+    window.avatarOneURL = "<%= image_url('temp_avatars/one.jpg')%>"
   </script>
 
   <%= favicon_link_tag asset_path('slaec-fav.png') %>
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 
