--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,11 @@
 
   --navBarBlue: #303E4D;
   --navBarGray: #C1C5CA;
+
+  --channelHeaderGray: #ddd;
+  --channelMessageGray: #616061;
+
+  --navIndexBlue: #6698c8;
 }
 
 input:focus {
@@ -45,3 +50,19 @@ input {
 	font-family: 'Lato', sans-serif;
 	letter-spacing: 0.25px;
 }
+
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+
+
