--- a/app/assets/stylesheets/workspace_channel_header.css
+++ b/app/assets/stylesheets/workspace_channel_header.css
@@ -13,7 +13,6 @@
 
 #channel-header > * {
   font-family: 'Noto Sans', sans-serif;
-  border: 1px solid red;
 }
 
 #channel-header .left-nav {
@@ -144,4 +143,27 @@
   color: white;
   background: var(--signinGreen);
   border: 1px solid var(--signinGreen);
+}
+
+.right-nav{
+  display: flex;
+  flex-direction: column;
+}
+
+.leave-channel-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--purple);
+  color: white;
+  border-radius: 4px;
+  padding: 4px;
+  margin: 4px 0;
+  cursor: pointer;
+}
+.leave-channel-button h1 {
+  /* box-sizing: border-box; */
+  margin: 0 auto;
+
 }
