--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
     window.redChatIconURL = "<%= image_url('wiggles/red-chat-icon.png')%>"
     window.sessionErrorURL = "<%= image_url('session-error.png')%>"
 
+    window.splashFeature01URL = "<%= image_url('splash_page/01.png')%>"
+    window.splashFeature02URL = "<%= image_url('splash_page/02.png')%>"
+    window.splashFeature03URL = "<%= image_url('splash_page/03.png')%>"
+    window.splashFeature04URL = "<%= image_url('splash_page/04.png')%>"
+    window.splashFeature05URL = "<%= image_url('splash_page/05.png')%>"
+
     window.avatarOneURL = "<%= image_url('temp_avatars/one.jpg')%>"
   </script>
 
