--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,8 @@
   --channelMessageGray: #616061;
 
   --navIndexBlue: #6698c8;
+
+  --channelFormBlack: #1d1c1d;
 }
 
 input:focus {
@@ -39,7 +41,6 @@ input:focus {
 input:hover {
   
 }
-
 
 input {
   border: 1px solid black;
@@ -64,5 +65,17 @@ input {
   background-color: rgba(0,0,0,0.4);
 }
 
+::-webkit-scrollbar {
+  background: transparent;
+  width: 16px;
+  height: 10px;
+}
 
-
+::-webkit-scrollbar-thumb {
+  height: 30px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 8px;
+  background-color: rgba(29,28,29,.52);
+  box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+}
