--- a/app/assets/stylesheets/workspace.css
+++ b/app/assets/stylesheets/workspace.css
@@ -3,13 +3,9 @@
   justify-content: flex-start;
 }
 
-/* #messages-history {
-  overflow: hidden;
-  display: flex;
-  flex: 1;
-} */
-
 #workspace-contents .main-content {
-  width: 79vw;
-  flex-grow: 100;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
 }
