--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -1,4 +1,3 @@
-
 .nav_bar {
   width: 223px;
   min-width: 223px;
@@ -8,6 +7,7 @@
   box-sizing: border-box;
   padding: 16px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #team_menu-top {
@@ -27,6 +27,7 @@
 #team_menu-bottom {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 #nav_bar-threads {
@@ -127,3 +128,13 @@
   color: white;
 }
 
+.action-button {
+  border: none;
+  align-items: center;
+  background: var(--purple);
+  color: white;
+  border-radius: 4px;
+  padding: 6px;
+  margin: 4px 0;
+  cursor: pointer;
+}
