partial changes to splash default links - incomplete

--- a/app/assets/stylesheets/splash_header.css
+++ b/app/assets/stylesheets/splash_header.css
@@ -35,3 +35,9 @@
   color: var(--headerGray);
   padding: 16px;
 }
+
+.splash-header-per > i {
+  color: var(--headerGray);
+  font-size: 32px;
+  padding: 4px;
+}
