--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: https://ogp.me/ns#">
 
   <script type="text/javascript">
     window.logoURL = "<%= image_url('Slack_Mark.svg')%>"
@@ -28,6 +28,12 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 
   <head>
+    <meta property="og:title" content="Slaec" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://slaec.herokuapp.com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/def.png" />
+    <meta property="og:description" content="A Slim Slack Clone" />
+
     <title>Does a thing | Slaec</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
