meta data correction in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Slaec" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://slaec.herokuapp.com/" />
-    <meta property="og:image" content="%PUBLIC_URL%/def.png" />
+    <meta property="og:image" content=<%= image_tag("/def.png")%> />
     <meta property="og:description" content="A Slim Slack Clone" />
 
     <title>Does a thing | Slaec</title>
